Fixed images and divs so that the text aligns properly and images appear

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 
 .img-text-wrapper {
@@ -75,4 +76,9 @@ body {
     text-align: center;
     padding-left: 100px;
     padding-right: 100px;
+}
+
+.logo-wrapper img{
+    width: 50%;
+    margin-bottom: 20px;
 }
